Implement scroll blocking for video container and adjust background color

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
     font-family: 'Neue Montreal', sans-serif;
     margin: 0;
-    background-color: #f3f3e9;
+    background-color: #610808;
 }
 
 .hero {
