--- a/style.css
+++ b/style.css
@@ -4,40 +4,82 @@ body {
     font-family: 'Neue Montreal', sans-serif;
     margin: 0;
     background-color: #f0f1e5;
+    overflow-x: hidden;
 }
 
 .hero {
-    margin-top: 182px;
+    height: 200vh;
+    /* Provide scroll space */
+    position: relative;
 }
 
-.Hero-heading {
-    padding-bottom: 8%;
-}
-
-h1 {
-    font-size: 120px;
-    margin-left: 2.3%;
-    color: #333;
-    line-height: 0.3;
-    font-weight: bold;
-}
-
-.video-container {
-    width: 100%;
+.hero-content {
     height: 100vh;
+    position: sticky;
+    top: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
-    position: sticky;
-    top: 0;
+    flex-direction: column;
+    background-color: #f0f1e5;
+}
+
+.Hero-heading {
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    transform: translateY(-50%);
+    z-index: 1;
+    text-align: left;
+}
+
+h1 {
+    font-size: 60px;
+    color: #333;
+    line-height: 1.8;
+    font-weight: 600;
+    margin: 0;
+    margin-left: 3px;
+    text-align: center;
+    /* Background gradient for text */
+    background: linear-gradient(76deg, #0e9f54, #191970, #36454F, #2F4F4F);
+    background-size: 300% auto;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 0 0 15px rgba(255, 255, 255, 0);
+    animation: animate-gradient 4s ease-in-out infinite;
+}
+
+@keyframes animate-gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.video-container {
+    position: absolute;
+
+    width: 100vw;
+    height: 100vh;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .video {
-    width: 95%;
-    height: 95%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    border-radius: 20px;
 }
 
 .content {
