--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
     font-family: 'Neue Montreal', sans-serif;
     margin: 0;
-    background-color: #f0f1e5;
+    background-color: #cae6d5;
     overflow-x: hidden;
 }
 
@@ -21,7 +21,7 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: #f0f1e5;
+    background-color: #cae6d5;
 }
 
 .Hero-heading {
